gcc/testsuite/objc.dg/pr28049.m
/* { dg-do compile } */
+ /* { dg-error "expected" } */
